# firelight

./: LICENSE  README.md  main.py  setup.cfg
firelight/: firelight.py
firelight/interfaces/: color.py  light.py
firelight/interfaces/lifx/: lifx.py
firelight/interfaces/openrgb/: openrgb.py
firelight/processing/: image.py  quantizer.py  screen_processor.py
lights/: color.py  light.py
lights/lifx/: lifx.py
