[metadata]
name = firelight-lighting
version = 1.0.0
author = Roshan Kumaraswamy
author_email = rkumaraswamy@berkeley.edu
description = Sync up colored lights to the contents of your screen.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roshie548/firelight
project_urls =
    Bug Tracker = https://github.com/roshie548/firelight/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    mss
    lifxlan

[options.entry_points]
console_scripts =
    firelight = firelight.firelight:main
